[package]
name = "casey"
version = "0.3.3"
authors = ["holygits <beauchjord@gmail.com>"]
edition = "2018"
description = "Case transforming macros for ident tokens"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jordy25519/casey"

[dependencies]
syn = "1.0"

[lib]
proc-macro = true
